# docsingest

./: .gitignore  .pre-commit-config.yaml  .pypirc  CHANGELOG.md  COMMIT_MESSAGE.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES.md  bump_version.py  example_docsingest_ignore  pypi_token.txt  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: python-package.yml
docsingest/: __init__.py  cli.py  ingest.py  pii_detector.py  tree_generator.py
docsingest/compliance/: __init__.py  audit_trail.py  cui_detector.py  enhanced_pii.py  export_control.py  sanitizer.py
scripts/: generate_results.py  install_dependencies.sh  pii_demo.py  pypi_upload.sh
test_documents/: .docsingest_ignore  sample1.txt  sample2.md
tests/: test_audit_trail.py  test_cui_detector.py  test_enhanced_pii.py  test_export_control.py  test_ingest.py  test_pii_detector.py  test_sanitizer.py
