[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docsingest"
version = "1.1.1"
description = "Document ingestion tool with compliance features"
readme = "README.md"
authors = [{name = "Marc Shade", email = "marc@2acrestudios.com"}]
license = {file = "LICENSE"}
requires-python = ">=3.7"
dependencies = [
    "requests>=2.25.0",
    "chardet>=3.0.0",
    "tiktoken>=0.3.0,<1.0.0",
    "markdown>=3.3.0",
    "python-docx>=0.8.11",
    "openpyxl>=3.0.0",
    "PyPDF2>=2.0.0"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing",
    "Topic :: Utilities"
]
keywords = ["document-processing", "ai", "compliance", "llm", "text-extraction"]

[project.optional-dependencies]
processing = [
    "PyPDF2",
    "chardet",
    "requests"
]
dev = [
    "pytest",
    "twine",
    "build"
]

[project.urls]
Homepage = "https://github.com/marc-shade/docsingest"
Repository = "https://github.com/marc-shade/docsingest"
"Bug Reports" = "https://github.com/marc-shade/docsingest/issues"
Source = "https://github.com/marc-shade/docsingest"

[project.scripts]
docsingest = "docsingest.cli:main"
